reading the paper, fixing wording

--- a/haskell2012.bib
+++ b/haskell2012.bib
@@ -162,7 +162,7 @@
   month =	 jun,
   volume =	 {},
   number =	 {},
-  pages =	 {134 -142},
+  pages =	 {134--142},
   keywords =	 {Haskell;ML;domain specific embedded
                   languages;functional languages;higher-order typed
                   programming language;implementation
@@ -392,7 +392,7 @@
 
 @article{Beshers:2007:ERU:1291220.1291184,
  author = {Beshers, Clifford and Fox, David and Shaw, Jeremy},
- title = {Experience report: using functional programming to manage a linux distribution},
+ title = {Experience report: using functional programming to manage a {Linux} distribution},
  journal = {SIGPLAN Notices},
  issue_date = {September 2007},
  volume = {42},
@@ -411,7 +411,7 @@
 
 @article{Jones:2008:ERP:1411203.1411219,
  author = {Jones, Mark P.},
- title = {Experience report: playing the DSL card},
+ title = {Experience report: playing the {DSL} card},
  journal = {SIGPLAN Notices},
  issue_date = {September 2008},
  volume = {43},
