no shared memories!
Search for "shared memories" and undo, if I am wrong. You should find
two cases.

--- a/content.tex
+++ b/content.tex
@@ -23,7 +23,7 @@ While creating new operating system concepts and regarding their interaction wit
 The ability to simulate separate components of the OS and of the application was the main goal to develop the OS simulator \soosim \cite{Baaij:2012}.
 The design decisions were:
 \begin{itemize}
-\item To simulate message passing and shared memories as the main forms of communication between software components.
+\item To simulate message passing and shared memory\olcomment{memory or memories?} as the main forms of communication between software components.
 \item To have global \emph{ticks}, designating an abstract notion of progress.
 \item To observe the number of ticks a software component is active, waiting for a response after invoking another component, or idle.
 \end{itemize}
